--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@medusa-payment-flutterwave-pro/monorepo",
   "description": "Monorepo for medusa-payment-flutterwave-pro package and starters",
   "license": "MIT",
+  "private": false,
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
@@ -15,5 +16,10 @@
     "@changesets/cli": "^2.26.2",
     "@manypkg/cli": "^0.21.0",
     "turbo": "^1.10.12"
-  }
+  },
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": ""
 }
